# school-bot

./: .gitignore  START.bat  UPDATE SCHEDULE.bat  config.py  main.py  middleware.py  pyproject.toml  requirements.txt
database/: __init__.py  database.py
database/models/: __init__.py  dependencies.py  questions_model.py  users_model.py
database/requests/: __init__.py  dependencies.py  questions_requests.py  users_requests.py
functions/: __init__.py  get_questions.py  idea_fn.py  mixed_fns.py  request_in_ai.py  update_schedule.py
handlers/: __init__.py  any_message.py  change_data_btns.py  change_data_functions.py  exam_info.py  get_schedule.py  homework_helper.py  maintenance.py  send_ideas.py
handlers/admin/: admin_qtn.py  block_users.py  channel_mailing.py  mailing.py  statistics.py
handlers/admin/themes/: all_theme.py  director.py  dnevnik_ru.py  education.py  studying.py
handlers/user/: active_users.py  user_qtn.py
markups/: __init__.py  answers_qtns_markups.py  choose_exam_markup.py  choose_shift_markup.py  choose_theme_markup.py  main_menu_markup.py  other_markups.py  staticks_markup.py
schedules/database_schedule/: first_schedule.sqlite3  second_schedule.sqlite3
schedules/excel_schedule/: 4D6CA700  A19FCC80  Расписание 5-11 классы.xlsx  Расписание 6-8 классы.xlsx
schedules/excel_schedule/old schedule/: Расписание 5-11 классы.xlsx  Расписание 5-11 классы_photo.xlsx  Расписание 6-8 классы.xlsx  Расписание 6-8 классы_photo.xlsx
states/: __init__.py  ask.py  change_data_states.py  homework_state.py  qtn_system_states.py
(+4 files in other folders)
